<resources>
    <string name="app_name">Stroll</string>
    <string name="mode">Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <!-- Bottom bar names -->
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="statistics">Statistics</string>

    <!-- Toolbar names -->
    <string name="settings">Settings</string>
    <string name="sensors">Sensors</string>
    <string name="introduction">Introduction</string>

    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="reset_tracking">Reset</string>
    <string name="time_to_start">It\'s time to start activity</string>

    <string name="still">Still</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>

    <string name="still_text">You are currently standing still!</string>
    <string name="walking_text">You are walking!</string>
    <string name="running_text">You are running!</string>

    <string name="permission_rational_dialog_title">Activity Recognition Permission Needed</string>
    <string name="permission_rational_dialog_message">To get information about your activity, you need to give Activity Recognition permission to Pet Buddy.</string>
    <string name="permission_rational_dialog_positive_button_text">Request a permission</string>
    <string name="permission_rational_dialog_negative_button_text">No thanks</string>

    <string name="settings_dialog_title">Activity Recognition Permission Needed</string>
    <string name="settings_dialog_message">Give permission manually inside the app\'s
    settings</string>
    <string name="settings_dialog_positive_button_text">Go to settings</string>
    <string name="settings_dialog_negative_button_text">No thanks</string>
    <string name="take_photo">Take Photo</string>

    <string name="take_picture">Take Picture</string>
    <string name="take_picture_description">Take a snapshot with the camera</string>
    <string name="plane_finding">Plane not found</string>
    <string name="ar">AR</string>
    <string name="add_photo">Add Photo</string>
    <string name="create_marker">Create Marker</string>
    <string name="create_point_of_interest">Create Point of interest</string>
    <string name="poi_made_successfully">POI made successfully</string>
    <string name="please_enter_a_name_for_poi">Please enter a name for POI</string>
    <string name="location_marker_touched">Location marker touched.</string>
    <string name="marker_name">Marker Name</string>
    <string name="history">History</string>
    <string name="delete_hike_question">Delete Hike?</string>
    <string name="delete_hike_forever_question">Are you sure you want to delete the hike forever?</string>
    <string name="delete_marker_question">Delete Marker?</string>

    <string name="delete_marker_forever_question">Are you sure you want to delete the marker forever?</string>
    <string name="are_you_sure_you_wanna_cancel_the_hike">Are you sure you want to cancel the hike and delete data for current hike?</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Hiking Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
    </string-array>

    <!-- statistics - sort by: -->
    <string name="sort_by">Sort by:</string>
    <string name="sort_by_distance">Distance</string>
    <string name="sort_by_averageSpeed">Average Speed</string>
    <string name="sort_by_time">Time</string>
    <string name="check_top5">Show Top 5</string>
    <string name="time_in_min">Time in min</string>
    <string name="average_speed_in_kmh">Average speed in km/h</string>
    <string name="average_speed_over_time">Average speed over time</string>

    <string name="no_recorded_hike">No recorded hikes yet. Please record a hike to see the statistics :)</string>
    <string name="from">From:</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="totaltime">TOTALTIME</string>
    <string name="date">Date:</string>
    <string name="photos">Photos</string>
    <string name="greetings">Greetings</string>
    <string name="your_name">Your name</string>
    <string name="summary">Summary</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="hike">hike</string>
    <string name="start_hike">start hike</string>
    <string name="start_a_hike">Start a hike!</string>
    <string name="augmented_reality">Augmented Reality</string>
    <string name="recorded_hikes">Recorded hikes</string>
    <string name="finish_hike">FINISH HIKE</string>
    <string name="_0moh">0moh</string>
    <string name="add_poi">Add POI</string>
    <string name="_0">0</string>
    <string name="cancel_hike">Cancel Hike</string>
    <string name="cancel_hike_question">Cancel Hike?</string>
    <string name="hike_saved_successfully">Hike saved successfully</string>
    <string name="welcome_nplease_enter_your_name">Welcome!\nPlease enter your name</string>
    <string name="please_enter_all_the_fields">Please enter all the fields</string>
    <string name="your_weight">Your Weight</string>
    <string name="kg">kg</string>
    <string name="start_strolling">Start Strolling</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="no_data">No data</string>
    <string name="unfiltered_sensor_data">Unfiltered sensor data:</string>
    <string name="raw_acc_data">Raw acc data</string>
    <string name="raw_gyro_data">Raw gyro data</string>
    <string name="raw_magnet_data">Raw magnet data</string>
    <string name="filtered_sensor_data">Filtered sensor data:</string>
    <string name="no_changes_in_acc_data">No changes in Acc data</string>
    <string name="no_changes_in_gyro_data">No changes in Gyro data</string>
    <string name="device_orientation">Device orientation</string>
    <string name="get_started">GET STARTED!</string>
    <string name="marker_title">Marker Title</string>
    <string name="destination">Destination</string>
    <string name="category">Category</string>
    <string name="move">Move</string>
    <string name="time_caps">TIME</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="_12_12_2022">12.12.2022</string>
    <string name="moh">Moh</string>
    <string name="hike_id">HIKE_ID</string>
    <string name="date_caps">DATE</string>
    <string name="duration">DURATION</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="distance_caps">DISTANCE</string>
    <string name="distance_in_km">Distance in km</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="start_a_hike_by_starting_point_and_destination">Start a hike by either creating a starting point and destination
 or by just start strolling!</string>
    <string name="see_your_favourite_destinations_in_ar">See your favorite destinations in AR</string>
    <string name="see_all_your_previous_hikes_and_stats">See all your previous hikes and stats!</string>

    <string name="yes_to_camera_request">have given us permission to use your camera</string>
    <string name="dark_mode">Dark mode</string>
    <string name="heat_map">Heat map</string>
    <string name="markers">Markers</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="mountains">Mountains</string>
    <string name="fishing">Fishing</string>
    <string name="attractions">Attractions</string>
    <string name="camping">Camping</string>
    <string name="canoe">Canoe</string>
    <string name="misc">Misc</string>
    <string name="starting_position">Starting position</string>
    <string name="register">Register</string>
    <string name="hikes">Hikes</string>
    <string name="details">Details</string>
    <string name="full_photo">Full Photo</string>
    <string name="stroll">STROLL</string>
    <string name="about_text">Stroll is brought to you by the Stroll development team. \nIt was developed as a project at UiT in Narvik by: \n
         - August Fredriksen: Project Manager \n - Jonathan Skaue: Senior Developer \n - Frédéric Charon: Senior Developer</string>
    <string name="no_recorded_hikes_n_come_back_after_you_ve_recorded_a_hike">No recorded hikes.\n Come back after you\'ve recorded a hike!</string>


    <string-array name="marker_categories">
        <item>Mountain</item>
        <item>Fishing</item>
        <item>Attraction</item>
        <item>Camping</item>
        <item>Canoe</item>
        <item>Misc</item>
    </string-array>
</resources>