<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.SensorFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/startButton"
        android:text="@string/start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:text="@string/stop_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accdata"
        android:textSize="16dp"
        android:textColor="@color/md_theme_dark_onError"
        android:text="@string/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvUnfilteredSensors"
        app:layout_constraintTop_toBottomOf="@+id/startButton"/>


    <TextView
        android:id="@+id/tvUnfilteredSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/unfiltered_sensor_data"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFilteredSensors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSensorDataAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raw_acc_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvUnfilteredSensors"
        app:layout_constraintTop_toBottomOf="@+id/tvUnfilteredSensors" />

    <TextView
        android:id="@+id/tvSensorDataGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raw_gyro_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvSensorDataAcc"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorDataAcc" />

    <TextView
        android:id="@+id/tvSensorDataMag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raw_magnet_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvSensorDataAcc"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorDataGyro" />

    <TextView
        android:id="@+id/tvFilteredSensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/filtered_sensor_data"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnfilteredSensors" />

    <TextView
        android:id="@+id/tvSensorDataAccFiltered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_changes_in_acc_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvFilteredSensors"
        app:layout_constraintTop_toBottomOf="@+id/tvFilteredSensors" />

    <TextView
        android:id="@+id/tvSensorDataGyroFiltered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_changes_in_gyro_data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvSensorDataAccFiltered"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorDataAccFiltered" />

    <TextView
        android:id="@+id/tvOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_orientation"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvSensorDataGyroFiltered"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorDataGyroFiltered" />


</androidx.constraintlayout.widget.ConstraintLayout>