<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:background="#ffffff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/hikeMapSnapShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/llDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hikeMapSnapShot"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/totalTimeHiked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/time_caps" />

                <TextView
                    android:id="@+id/totalDistanceHiked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:padding="4dp"

                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/averageSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:padding="4dp"
                    android:text="@string/avgspeed" />

            </LinearLayout>

            <TextView
                android:id="@+id/dateTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="316dp"
                android:layout_marginTop="8dp"
                android:text="@string/_12_12_2022"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>

