<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.StatisticsFragment">

    <TextView
        android:id="@+id/tv_no_hikes_recorded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_recorded_hike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barChart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFilterBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_spFilter"
        app:layout_constraintEnd_toStartOf="@+id/statistics_spFilter"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/statistics_spFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/filter_options"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_spFilter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toggle_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_baseline_view_list_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <CheckBox
        android:id="@+id/check_top5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_top5"
        app:layout_constraintBottom_toBottomOf="@+id/statistics_spFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>